auto: prevent left-zone hover shift with transparent trigger right border

--- a/src/stories/phone-input-field.css
+++ b/src/stories/phone-input-field.css
@@ -27,7 +27,7 @@
 }
 
 .phone-input-field__country .country-selector__trigger {
-  border-right: 0;
+  border-right: 1px solid transparent;
 }
 
 .phone-input-field__country .country-selector__separator {
